# ray_tracer

./: CMakeLists.txt  README.md  bdpt.h  box.cpp  box.h  camera.cpp  camera.h  checker_texture.cpp  checker_texture.h  common_method.h  constant_medium.cpp  constant_medium.h  constant_texture.cpp  constant_texture.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  diffuse_light.cpp  diffuse_light.h  erpt.h  hitable.cpp  hitable.h  hitable_list.cpp  hitable_list.h  image_texture.cpp  image_texture.h  isotropic.h  light.h  light_list.h  main.cpp  material.cpp  material.h  metal.cpp  metal.h  moving_sphere.cpp  moving_sphere.h  multithread_session.h  nne.h  noise_texture.cpp  (+26 more)
geometry/: common_method.h  light.h  random.h  rotate.h  scene.h  translate.h  vec3.cpp  vec3.h
material/: dielectric.h  diffuse.h  material.cpp  material.h  metal.h
shapes/: diffuse_light.h  hitable.h  rectangle.cpp  rectangle.h  sphere.h  triangle.h
texture/: image.h  stb_image.h  texture.h
